--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: "Create and merge build change"
 
-description: "This action will create a pull request, approve the change, and merge it back in using the token provided."
+description: "This action will create a pull request, approve the change, and merge it back in using the provided tokens."
 
 inputs:
   base-branch:
@@ -13,7 +13,7 @@ inputs:
     description: 'The title of the PR.'
     required: true
   github-token:
-    description: 'The token that GitHub actions can use to create the PR.'
+    description: 'The GitHub Action bot token used to create the PR.'
     required: true
   pat-token:
     description: 'The token used to submit a review and merge the PR.'
